# praktika2026

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
api-gateway/: Cargo.toml  Dockerfile
api-gateway/migrations/: 0001_create_users_table.sql  0002_extend_users_profile.sql  0003_create_products_table.sql  0004_create_page_visits_table.sql
api-gateway/src/: app_state.rs  config.rs  handlers.rs  main.rs  middleware.rs  proxy.rs  routes.rs
benchmark-service/: Cargo.toml
benchmark-service/src/: consumer.rs  generator.rs  json_benchmark.rs  main.rs  metrics.rs  protobuf_benchmark.rs  report.rs
common/: Cargo.toml  build.rs
common/src/: amqp.rs  config.rs  dto.rs  errors.rs  events.rs  jwt.rs  lib.rs  utils.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  orders.ts
frontend/src/components/: Footer.tsx  Layout.tsx  LiveCheckoutModal.tsx
frontend/src/hooks/: useOrderSocket.ts
frontend/src/pages/: AdminPulsePage.tsx  HomePage.tsx  LoginPage.tsx  OrdersPage.tsx  ProductDetailsPage.tsx  ProfilePage.tsx  RegisterPage.tsx
frontend/src/types/: index.ts  order.ts  ws.ts
notification-service/: Cargo.toml  Dockerfile  tsconfig.tsbuildinfo
notification-service/src/: app_state.rs  config.rs  consumer.rs  dto.rs  hub.rs  main.rs  providers.rs  ws.rs
order-service/: Cargo.toml  Dockerfile
order-service/migrations/: 0001_create_orders_table.sql  0002_create_order_status_history.sql  0003_extend_orders_with_product_snapshot.sql
order-service/src/: app_state.rs  config.rs  consumer.rs  handlers.rs  logistics.rs  main.rs  middleware.rs  models.rs  publisher.rs  repository.rs  routes.rs  services.rs
payment-service/: Cargo.toml  Dockerfile
payment-service/migrations/: 0001_create_payments_table.sql
payment-service/src/: config.rs  consumer.rs  db.rs  main.rs  models.rs  providers.rs  publisher.rs  repository.rs  service.rs
proto/: order_events.proto
scripts/: init-multiple-dbs.sql
