[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true

common = { path = "../common" }

serde_json = "1.0"
lapin = "2.3"
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros"] }
bcrypt = "0.15"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
jsonwebtoken.workspace = true
