[package]
name = "benchmark-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
lapin.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util.workspace = true
prost.workspace = true
uuid.workspace = true

common = { path = "../common" }
