[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
lapin.workspace = true
thiserror.workspace = true
tokio.workspace = true
prost.workspace = true
axum.workspace = true
tracing.workspace = true
futures-util = "0.3"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"