[package]
name = "notification-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
lapin.workspace = true
futures-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
uuid.workspace = true
reqwest.workspace = true
sqlx.workspace = true

common = { path = "../common" }
